tests/parser-test-files/bad-files/parse-for.2.error
error: Malformed for expression
  --> test:4:16
   |
 4 |  (define f (for x))
   |                  ^ expected in
